logs/products.zopeprofiler.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ZopeProfiler'...
Compiling './lib/python3.5/site-packages/Products/ZopeProfiler/HLProfiler.py'...
***   File "./lib/python3.5/site-packages/Products/ZopeProfiler/HLProfiler.py", line 223
    x= 1l
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ZopeProfiler/ZopeProfiler.py'...
***   File "./lib/python3.5/site-packages/Products/ZopeProfiler/ZopeProfiler.py", line 333
    raise ValueError, 'unsupported timer'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.ZopeProfiler-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/dm'...
Listing './lib/python3.5/site-packages/dm/profile'...
Compiling './lib/python3.5/site-packages/dm/profile/dmstats.py'...
***   File "./lib/python3.5/site-packages/dm/profile/dmstats.py", line 51
    self._print(indent + `self.total_calls` + " function calls")
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dm.profile-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
